--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,40 +4,39 @@ jms_security_extra:
 
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+#        Symfony\Component\Security\Core\User\User: plaintext
+        Ahs\B0bBundle\Entity\User:
+          algorithm: sha512
+          encode_as_base64: false
+          #iterations: 5000
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
-        in_memory:
-            memory:
-                users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+        users:
+          entity: { class: AhsB0bBundle:User, property: email }
 
     firewalls:
-        dev:
-            pattern:  ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-
-        login:
-            pattern:  ^/demo/secured/login$
-            security: false
-
         secured_area:
-            pattern:    ^/demo/secured/
-            form_login:
-                check_path: /demo/secured/login_check
-                login_path: /demo/secured/login
-            logout:
-                path:   /demo/secured/logout
-                target: /demo/
-            #anonymous: ~
-            #http_basic:
-            #    realm: "Secured Demo Area"
+          pattern:    ^/
+          anonymous: ~
+          form_login:
+            login_path:  /login
+            check_path:  /login_check
+            username_parameter: email
+            password_parameter: password
+          logout:
+            path:   /logout
+            target: /
+          remember_me:
+            key:      "%secret%"
+            lifetime: 31536000 # 365 days in seconds
+            path:     /
+            domain:   ~ # Defaults to the current domain from $_SERVER
+            remember_me_parameter: remember
 
     access_control:
-        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
-        #- { path: ^/_internal/secure, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
+        - { path: ^/login,    roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/logout,   roles: ROLE_USER }
