--- a/src/Ahs/B0bBundle/Resources/config/routing.yml
+++ b/src/Ahs/B0bBundle/Resources/config/routing.yml
@@ -1,11 +1,17 @@
-ahs_b0b_homepage:
+ahs_b0b_home:
     pattern:  /
     defaults: { _controller: AhsB0bBundle:Default:index }
 
-ahs_b0b_loginpage:
+ahs_b0b_login:
     pattern:  /login
     defaults: { _controller: AhsB0bBundle:User:login }
 
-ahs_b0b_registerpage:
+ahs_b0b_login_check:
+    pattern:  /login_check
+
+ahs_b0b_logout:
+    pattern:  /logout
+
+ahs_b0b_register:
     pattern:  /register
     defaults: { _controller: AhsB0bBundle:User:register }
